changes in index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>git one</title>
 </head>
 <body>
-    <h1>This is for Git understanding</h1>
+    <h1>This is for Git understanding Important</h1>
 </body>
 </html>
